--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    
-}
-
-h1{
-    text-align: center;
-}
-.navbar{
-    background: #19191a;
+  }
+  
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+  }
+ 
+  .navbar {
+    background: #333;
     height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
     position: sticky;
-    top:0;
+    top: 0;
     z-index: 999;
-}
-.navbar-container {
+  }
+  
+  .navbar-container {
     display: flex;
     justify-content: space-between;
     height: 80px;
-  }
-  
-  .container {
-    z-index: 1;
-    width: 100%;
-    max-width: 1300px;
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 50px;
-    padding-left: 50px;
   }
   
   .navbar-logo {
@@ -40,7 +32,7 @@ h1{
     justify-self: start;
     cursor: pointer;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 1.8rem;
     display: flex;
     align-items: center;
   }
@@ -49,13 +41,20 @@ h1{
     margin-right: 0.5rem;
   }
   
+  .menu-icon {
+    display: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: #fff;
+    margin-right: 1rem;
+  }
+  
   .nav-menu {
     display: flex;
     align-items: center;
     justify-content: center;
     list-style: none;
     text-align: center;
-    justify-content: flex-end;
   }
   
   .nav-item {
@@ -76,6 +75,17 @@ h1{
     height: 100%;
   }
   
+  .container {
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 50px;
+    padding-left: 50px;
+  }
+  
+  
   .activated {
     color: #09bef0;
   }
@@ -84,23 +94,66 @@ h1{
     color: #fff;
   }
   
-  .menu-icon {
-    display: none;
+  
+  .home {
+    text-align: center;
+    background-color: #f0e68c; 
+    padding: 3rem;
+    color: #333;
+  }
+
+  .about {
+    text-align: center; 
+    background-color: #add8e6;
+    padding: 3rem;
+    color: #333;
+
+  }
+
+
+  .contact {
+    text-align: center;
+    background-color: #ffb6c1; 
+    padding: 3rem;
+    color: #333;
+  }
+
+  .services {
+    text-align: center;
+    background-color: #98fb98; 
+    padding: 3rem;
+    color: #333;
   }
   
-  .page-icon{
-font-size: 2.2rem;
-margin: 1rem;
-
+  .services ul {
+    list-style: none;
+    text-align: center; 
+    margin: 1rem; 
   }
- .home,
- .about,
- .services,
- .contact{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1.5rem; 
-   
+  
+  .services li {
+    margin-bottom: 1rem;
+  }
+  .page-icon {
+    font-size: 2.2rem;
+    margin: 1rem;
+  }
 
- }
+  .footer {
+    background: #333;
+    color: #fff;
+    padding: 1rem 0;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
+  
+  .footer-container {
+    max-width: 1300px;
+    margin: 0 auto;
+  }
+  p{
+    line-height: 1.5;
+    padding: 1rem;
+  }
